--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==1.3.5
-seaborn==0.11.2
-numpy==1.21.6
-matplotlib==3.2.2
-scipy==1.7.3
-nbconvert==5.6.1
+pandas
+seaborn
+numpy
+matplotlib
+scipy
+nbconvert
